keep crashing so fix eror